Updates from ShareLaTeX

--- a/02_theory.tex
+++ b/02_theory.tex
@@ -202,14 +202,14 @@ substituting $s$ with $g_5$ yields
         \frac{\partial g_5}{\partial z}   &= \sin(x^2)+xy
     \end{align*}
 \end{multicols}
-The calculation of the derivatives together with a dependency graph can be seen in figure \ref{fig:depency_graph_backward_AD}. This shows that we get all the derivatives of $f(x) = g_5$ with a single function evaluation!
+The calculation of the derivatives together with a dependency graph can be seen in \autoref{fig:depency_graph_backward_AD}. This shows that we get all the derivatives of $f(x) = g_5$ with a single function evaluation!
 \begin{figure}[htbp]
 	\centering
 	    \includegraphics[width=0.9\textwidth]{figures/dependency_graph_backward_AD.pdf}
 	    \caption{NOT A FINISHED FIGURE. Just a quick sketch of the idea I have of visualising the process of backward AD as i felt it got a bit messy with all the expressions. Gladly receiving comments on the thought/suggestions to make it more clear}
 	\label{fig:depency_graph_backward_AD}
 \end{figure}
-Comparing this to the method of Dual Numbers were we would have to evaluate $f$ three times, one for each derivative, this is a big improvement. This illustrates the strength of backward AD - no matter how many input parameters a function have, you only need one function evaluation to get all the derivatives of a function. The disadvantage of backward AD is that when we implement this, in differ from what we did in the example above when we did it by hand, we still only want to carry along the function- and the derivative values as we did in forward AD. This means that we have to implement the dependency tree shown in figure \ref{fig:depency_graph_backward_AD}. This makes the implementation of backward AD much harder than for forward AD and a bad implementation of this tree will reduce the advantage of backward AD. Also if the function is a vector function and not a scalar function, backward AD needs to run $m$ times if $f: \Re^n \rightarrow \Re^m$, hence if $n\approx m$, forward AD and backward AD will have approximately the same complexity. This is some of the reason why we here will have focus on implementing forward AD.
+Comparing this to the method of Dual Numbers were we would have to evaluate $f$ three times, one for each derivative, this is a big improvement. This illustrates the strength of backward AD - no matter how many input parameters a function have, you only need one function evaluation to get all the derivatives of a function. The disadvantage of backward AD is that when we implement this, in differ from what we did in the example above when we did it by hand, we still only want to carry along the function- and the derivative values as we did in forward AD. This means that we have to implement the dependency tree shown in \autoref{fig:depency_graph_backward_AD}. This makes the implementation of backward AD much harder than for forward AD and a bad implementation of this tree will reduce the advantage of backward AD. Also if the function is a vector function and not a scalar function, backward AD needs to run $m$ times if $f: \Re^n \rightarrow \Re^m$, hence if $n\approx m$, forward AD and backward AD will have approximately the same complexity. This is some of the reason why we here will have focus on implementing forward AD.
 
 \subsection{Forward Automatic Differentiation with multiple parameters}
 When we are dealing with functions with many input parameters and we wish to implement a forward AD, there are more efficient ways of doing this than implementing with Dual Numbers. Knut-Andreas Lie describes in \emph{\citet{lieMrstUrl}} a method where we do not need $n$ function evaluations for $n$ input parameters. Say we have a scalar function $f: \Re^n \rightarrow \Re$ and we want to obtain the gradient of $f$. Then the main idea is when we define our AD-variables, instead of having each AD-variable storing only the derivative with respect to itself, they store their gradient to the corresponding space they are in. This means we have to define what we call our primary variables which is all the variables in the relevant space. Say we have three variables $x$, $y$ and $z$ and for any function $f(x,y,z)$ we are interested in finding the gradient of $f$, $\nabla f=(f_x,\hspace{0.5em} f_y,\hspace{0.5em} f_z)^\top$. To achieve this we define the corresponding AD-variables
@@ -269,7 +269,7 @@ where \textbf{K} is an diffusion coefficient and we want to find $u$ on $\Omega 
     \int_{\partial\Omega_i} - \textbf{K} \nabla u \cdot \textbf{n} ds = \int_{\Omega_i} q dA.
     \label{eq:conservation}
 \end{equation}
-Here \textbf{n} is the unit normal to the cell $\Omega_i$, so equation \eqref{eq:conservation} describes the conservation of mass in the cell $\Omega_i$ where total flux in and out of the boundary of $\Omega_i$ is equal to the total production in $\Omega_i$. For simplicity we define $\textbf{v} = - \textbf{K} \nabla u$ as the flux. As a simple example to begin with, we will consider figure \ref{fig:gridTwoCells} who shows two cells $\Omega_i$ and $\Omega_k$. They both have a value $u_i$ and $u_k$ in the centre of the cell and the boundary, or facet, between the cells is defined as $\Gamma_{i,k}$.
+Here \textbf{n} is the unit normal to the cell $\Omega_i$, so equation \eqref{eq:conservation} describes the conservation of mass in the cell $\Omega_i$ where total flux in and out of the boundary of $\Omega_i$ is equal to the total production in $\Omega_i$. For simplicity we define $\textbf{v} = - \textbf{K} \nabla u$ as the flux. As a simple example to begin with, we will consider \autoref{fig:gridTwoCells} who shows two cells $\Omega_i$ and $\Omega_k$. They both have a value $u_i$ and $u_k$ in the centre of the cell and the boundary, or facet, between the cells is defined as $\Gamma_{i,k}$.
 \begin{figure}[htb]
     \centering
     \includegraphics[width = 0.7\textwidth]{figures/grid_two_cells.pdf}
@@ -290,12 +290,12 @@ Here $\tilde{u}_{i,k}$ is the value of $u$ at the centre of the facet $\Gamma_{i
 \begin{equation*}
     v_{i,k} \approx L_{i,k}\textbf{K}_i\frac{(\tilde{u}_{i,k} - u_i)\textbf{c}_{i,k}}{|\textbf{c}_{i,k}|^2} \cdot \textbf{n}_{i,k},
 \end{equation*}
-can not be computed directly. Here $\textbf{c}_{i,k}$ is the vector from $u_i$ to $\tilde{u}_{i,k}$ as seen in figure \ref{fig:gridTwoCells} . To handle this we first define what we call a transmissibility matrix where
+can not be computed directly. Here $\textbf{c}_{i,k}$ is the vector from $u_i$ to $\tilde{u}_{i,k}$ as seen in \autoref{fig:gridTwoCells} . To handle this we first define what we call a transmissibility matrix where
 \begin{equation}
     T_{i,k}(\tilde{u}_{i,k} - u_i) = L_{i,k}\textbf{K}_i\frac{(\tilde{u}_{i,k} - u_i)\textbf{c}_{i,k}}{|\textbf{c}_{i,k}|^2} \cdot \textbf{n}_{i,k}.
     \label{eq:transmissibility}
 \end{equation}
-Because we know that the amount of flux from cell $\Omega_i$ to $\Omega_k$ must be the same as from $\Omega_k$ to $\Omega_i$ only with opposite sign. This gives us the relations $v_{i,k} = -v_{k,i}$ and from figure \ref{fig:gridTwoCells} it is clear that $\tilde{u}_{i,k} = \tilde{u}_{k,i}$. Hence we have the relation 
+Because we know that the amount of flux from cell $\Omega_i$ to $\Omega_k$ must be the same as from $\Omega_k$ to $\Omega_i$ only with opposite sign. This gives us the relations $v_{i,k} = -v_{k,i}$ and from \autoref{fig:gridTwoCells} it is clear that $\tilde{u}_{i,k} = \tilde{u}_{k,i}$. Hence we have the relation 
 \begin{equation*}
     v_{i,k} = T_{i,k}(\tilde{u}_{i,k} - u_i) \hspace{3em} -v_{i,k} = T_{k,i}(\tilde{u}_{i,k} - u_k)
 \end{equation*}
@@ -326,7 +326,7 @@ Where $q_i$ is the total production in cell $\Omega_i$. Now we can get a linear 
 \end{align*}
 This means we can solve the Poisson equation \eqref{eq:Poisson}, using the scheme explained in \eqref{eq:newtonRaphsonVector} and by having $u$ as an AD-variable. But we still end up with a linear system of equations that we may as well solve without AD. 
 
-To show the real elegance of using AD to solve PDE's we want to create a framework where we have defined discrete divergence and gradient operators such that we can write the discrete equations we want to solve on a similar form as in the continuous case. We also want to be able to do this no matter how complex and unstructured grid we have. Instead of the simple two-cell grid we used in figure \ref{fig:gridTwoCells} consider a more complex grid like we have in figure \ref{fig:partialGrid}. The figure shows a part of some larger grid. To define the discrete divergence and gradient operators we need some information about the topology of the grid. The grid consist of three types of objects: cells, facets and nodes. The cells are each $\Omega_i \subset \Omega$ and in our two-dimensional case the facets are simply the lines between each cell. The nodes are defined points based on the method we use where we want to find the value of the function we search. In the case of figure \ref{fig:gridTwoCells} we had two nodes, $u_i$ and $u_k$. Each cell and facet has physical properties like area or length and centroid or centre. The facets also has a normal vector. \autoref{fig:partialGrid} shows how we have two different mappings that explains the relation between the cells and the facets where the values dependent on cell 5 and 8 are written out. The first mapping $F(c)$ is mapping from cell $c$ to facet $f$. The second mapping, $C_i(f)$ for $i = 1,2$, is a mapping from a facet $f$ to the two cells $C_1$ and $C_2$ that share this facet. All these properties will be used to create the discrete divergence and gradient operators.
+To show the real elegance of using AD to solve PDE's we want to create a framework where we have defined discrete divergence and gradient operators such that we can write the discrete equations we want to solve on a similar form as in the continuous case. We also want to be able to do this no matter how complex and unstructured grid we have. Instead of the simple two-cell grid we used in \autoref{fig:gridTwoCells} consider a more complex grid like we have in \autoref{fig:partialGrid}. The figure shows a part of some larger grid. To define the discrete divergence and gradient operators we need some information about the topology of the grid. The grid consist of three types of objects: cells, facets and nodes. The cells are each $\Omega_i \subset \Omega$ and in our two-dimensional case the facets are simply the lines between each cell. The nodes are defined points based on the method we use where we want to find the value of the function we search. In the case of \autoref{fig:gridTwoCells} we had two nodes, $u_i$ and $u_k$. Each cell and facet has physical properties like area or length and centroid or centre. The facets also has a normal vector. \autoref{fig:partialGrid} shows how we have two different mappings that explains the relation between the cells and the facets where the values dependent on cell 5 and 8 are written out. The first mapping $F(c)$ is mapping from cell $c$ to facet $f$. The second mapping, $C_i(f)$ for $i = 1,2$, is a mapping from a facet $f$ to the two cells $C_1$ and $C_2$ that share this facet. All these properties will be used to create the discrete divergence and gradient operators.
 \begin{figure}[htb]
     \centering
     \includegraphics[width = 0.7\textwidth]{figures/grid_cells_facets.pdf}
@@ -356,7 +356,7 @@ Hence we can now, only based on the topology of the grid, create discrete diverg
     -\nabla(\textbf{K}\nabla u) - q &= 0 \\
     \textbf{F}(\textbf{u}) = \texttt{divergence}(\textbf{T }\texttt{gradient}(\textbf{u}))-\textbf{q} &= 0.
 \end{align*}
-Here \textbf{T} is the transmissibility matrix defined in \eqref{eq:transmissibility}. We can see how similar the notation for the discrete equations are to the continuous equation. We can actually read the discrete expression and directly understand what equation we are trying to solve. For this simple Poisson equation, we will still have a linear system and we would not necessarily need to use AD to solve it, but for more complex problems, we can derive the discrete divergence and gradient operators in the same approach for any type of grid and although the system becomes non-linear it will be easy to solve using AD and Newton-Raphson method. An example of this can be seen in section \ref{sec:FlowSolver}.
+Here \textbf{T} is the transmissibility matrix defined in \eqref{eq:transmissibility}. We can see how similar the notation for the discrete equations are to the continuous equation. We can actually read the discrete expression and directly understand what equation we are trying to solve. For this simple Poisson equation, we will still have a linear system and we would not necessarily need to use AD to solve it, but for more complex problems, we can derive the discrete divergence and gradient operators in the same approach for any type of grid and although the system becomes non-linear it will be easy to solve using AD and Newton-Raphson method. An example of this can be seen in \autoref{sec:FlowSolver}.
 
  
 
